# python-yandex-feeds

./: LICENSE  pyproject.toml
yandex_feeds/: __init__.py  feed.py
