[tool.poetry]
name = "python-yandex-feeds"
version = "0.1.0"
description = "Library with collection of yandex feeds"
authors = ["Forkhammer <forkhammer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic-xml = "^2.13.1"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
